<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/white" >


    <TextView
        android:id="@+id/newdev_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:layout_margin="30dp"
        android:text="@string/devicepopuptitle"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/whoru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newdev_title"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:text="@string/select"
        android:textSize="20dp"/>

    <LinearLayout
        android:id="@+id/accounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/whoru">

        <TextView
            android:id="@+id/paulBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="5dp"
            android:drawableTop="@drawable/paul_large"
            android:text="@string/paul"
            android:gravity="center"/>

        <TextView
            android:id="@+id/aliceBtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="5dp"
            android:drawableTop="@drawable/alice_large"
            android:text="@string/alice"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/some1else"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accounts"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/addtitle"
        android:textSize="20dp"/>

    <LinearLayout
        android:id="@+id/addacc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/some1else">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:paddingHorizontal="30dp"
            android:drawableLeft="@drawable/add_large"
            android:text="@string/add"
            android:textSize="20dp"
            android:gravity="center"/>
    </LinearLayout>

</RelativeLayout>