<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">


    <TextView
        android:id="@+id/pop_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        android:textColor="#000"
        android:text="@string/abusepoptitle"
        android:textStyle="bold"
        android:textSize="25dp"/>


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/pop_title"
        android:layout_above="@id/close_btn"
        android:scrollbars="vertical"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/poptxt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:textSize="17.5dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:text="@string/abusepoptext1" />

            <TextView
                android:id="@+id/poptxt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="5dp"
                android:textSize="15dp"
                android:textColor="#000"
                android:text="@string/abusepoptext2" />

            <Button
                android:id="@+id/later"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/later"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/poptxt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:textSize="17.5dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:text="@string/abusepoptext3"  />

            <TextView
                android:id="@+id/poptxt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="5dp"
                android:textSize="15dp"
                android:textColor="#000"
                android:text="@string/abusepoptext4" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:stretchColumns="*">

                <TableRow
                    android:id="@+id/resource1">

                    <TextView
                        android:id="@+id/resource1name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="15dp"
                        android:textSize="17.5dp"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:text="@string/resource1"  />

                    <Button
                        android:id="@+id/resource1btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="15dp"
                        android:text="@string/open">
                    </Button>

                </TableRow>

                <TableRow
                    android:id="@+id/resource2">

                    <TextView
                        android:id="@+id/resource2name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="15dp"
                        android:textSize="17.5dp"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:text="@string/resource2"  />

                    <Button
                        android:id="@+id/resource2btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="15dp"
                        android:text="@string/open">
                    </Button>

                </TableRow>

                <TableRow
                    android:id="@+id/resource3">

                    <TextView
                        android:id="@+id/resource3name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="15dp"
                        android:textSize="17.5dp"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:text="@string/resource3"  />

                    <Button
                        android:id="@+id/resource3btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="15dp"
                        android:text="@string/open">
                    </Button>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/close_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CLOSE"
        android:textSize="20dp"
        android:background="@android:color/holo_red_light"
        android:layout_alignParentBottom="true" />

</RelativeLayout>